--- a/.github/workflows/api.yaml
+++ b/.github/workflows/api.yaml
@@ -128,6 +128,10 @@ jobs:
       run: |
         aws ecs describe-task-definition --task-definition ${{ env.ECS_TASK_DEFINITION }} > ${{ env.ECS_TASK_DEFINITION }}
 
+    - name: list files
+      run: |
+        ls
+
     - name: Fill in the new image ID in the Amazon ECS task definition
       id: task-def
       uses: aws-actions/amazon-ecs-render-task-definition@v1
