--- a/.github/workflows/api.yaml
+++ b/.github/workflows/api.yaml
@@ -131,6 +131,7 @@ jobs:
     - name: list files
       run: |
         ls
+        cat status_changer
 
     - name: Fill in the new image ID in the Amazon ECS task definition
       id: task-def
