--- a/.github/workflows/api.yaml
+++ b/.github/workflows/api.yaml
@@ -126,7 +126,7 @@ jobs:
 
     - name: Download task definition from aws
       run: |
-        aws ecs describe-task-definition --task-definition ${{ env.ECS_TASK_DEFINITION }} > ${{ env.ECS_TASK_DEFINITION }}
+        aws ecs describe-task-definition --task-definition ${{ env.ECS_TASK_DEFINITION }} | jq .taskDefinition > ./${{ env.ECS_TASK_DEFINITION }}
 
     - name: list files
       run: |
@@ -137,7 +137,7 @@ jobs:
       id: task-def
       uses: aws-actions/amazon-ecs-render-task-definition@v1
       with:
-        task-definition: ${{ env.ECS_TASK_DEFINITION }}
+        task-definition: ./${{ env.ECS_TASK_DEFINITION }}
         container-name: ${{ env.CONTAINER_NAME }}
         image: ${{ steps.build-image.outputs.image }}
 
