feat: adiciona config datadog

--- a/api/docker-compose.yaml
+++ b/api/docker-compose.yaml
@@ -4,10 +4,39 @@ services:
   api:
     build: './'
     restart: unless-stopped
-    volumes:
-      - ./:/app:cached
     ports:
       - ${APP_PORT}:80
+    environment:
+      - DD_TRACE_AGENT_URL=http://datadog-agent:8126
+      - DD_SERVICE=status-changer
+      - DD_ENV=test
+
+  datadog-agent:
+    image: gcr.io/datadoghq/agent:latest
+    pid: host
+    environment:
+      - DD_API_KEY
+      - DD_APM_ENABLED=true
+      - DD_APM_NON_LOCAL_TRAFFIC=true
+      - DD_LOGS_ENABLED=true
+      - DD_LOGS_CONFIG_CONTAINER_COLLECT_ALL=true
+      - DD_REMOTE_CONFIGURATION_ENABLED=true
+      - DD_INVENTORIES_CONFIGURATION_ENABLED=true
+      - DD_PROCESS_AGENT_ENABLED=true
+      - DD_DOGSTATSD_NON_LOCAL_TRAFFIC=true
+      - DD_ENV="test"
+      - DD_OTLP_CONFIG_RECEIVER_PROTOCOLS_GRPC_ENDPOINT=0.0.0.0:4317
+      - DD_OTLP_CONFIG_RECEIVER_PROTOCOLS_HTTP_ENDPOINT=0.0.0.0:4318
+    ports:
+      - "8125:8125"
+      - "8126:8126"
+      - "4317:4317"
+      - "4318:4318"
+    volumes:
+     - /var/run/docker.sock:/var/run/docker.sock
+     - /proc/:/host/proc/:ro
+     - /sys/fs/cgroup:/host/sys/fs/cgroup:ro
+     - /var/lib/docker/containers:/var/lib/docker/containers:ro
 
 networks:
   default:
