--- a/.github/workflows/api.yaml
+++ b/.github/workflows/api.yaml
@@ -56,6 +56,10 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
 
+    - name: Application Version
+      id: version
+      uses: paulhatch/semantic-version@v5.4.0
+
     - name: Login to Docker Hub
       uses: docker/login-action@v2
       with:
